// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dataops-crawler Snapshot Tests Glue Crawler App App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-glue-crawler-main": {
    "Description": "(SO0320-dataops-crawler) Modern Data Architecture Accelerator. Version 1.5.0",
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojecttestclassifiersclassifierCsvC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-test/classifiers/classifierCsv",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojecttestdatabaseNameexampledatabase2C96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-test/databaseName/example-database-2",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojecttestdatabaseNameexampledatabase3C96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-test/databaseName/example-database-3",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojecttestdatabaseNameexampledatabaseC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-test/databaseName/example-database",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojecttestdeploymentRoledefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-test/deploymentRole/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojecttestkmsArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-test/kmsArn/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojecttestprojectBucketdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-test/projectBucket/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojecttestprojectTopicArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-test/projectTopicArn/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojecttestsecurityConfigurationdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-test/securityConfiguration/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-glue-crawler-main/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "dataops-crawler",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-glue-crawler-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-dataops-crawler) Modern Data Architecture Accelerator. Version 1.5.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/dataops-project-test/crawler/name/test-crawler",
          "Tags": {
            "mdaa_cdk_app": "dataops-crawler",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-glue-crawler-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-glue-crawler-main-test-crawler",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/dataops-project-test/crawler/name/test-crawler-enum-variants",
          "Tags": {
            "mdaa_cdk_app": "dataops-crawler",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-glue-crawler-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-glue-crawler-main-test-crawler-enum-variants",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/dataops-project-test/crawler/name/test-crawler-event-mode",
          "Tags": {
            "mdaa_cdk_app": "dataops-crawler",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-glue-crawler-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-glue-crawler-main-test-crawler-event-mode",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Workflow Crawler failure events",
          "EventPattern": {
            "detail": {
              "crawlerName": [
                "test-org-test-env-test-domain-test-glue-crawler-main-test-crawler-enum-variants",
              ],
              "state": [
                "Failed",
              ],
            },
            "source": [
              "aws.glue",
            ],
          },
          "Name": "test-org-test-env-test-domain-test-glue-crawler-main-te-1dc8b6ec",
          "State": "ENABLED",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-crawler",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-glue-crawler-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Targets": [
            {
              "Arn": {
                "Ref": "SsmParameterValuetestorgtestdomaindataopsprojecttestprojectTopicArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter",
              },
              "Id": "Target0",
            },
          ],
        },
        "Type": "AWS::Events::Rule",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Workflow Crawler failure events",
          "EventPattern": {
            "detail": {
              "crawlerName": [
                "test-org-test-env-test-domain-test-glue-crawler-main-test-crawler-event-mode",
              ],
              "state": [
                "Failed",
              ],
            },
            "source": [
              "aws.glue",
            ],
          },
          "Name": "test-org-test-env-test-domain-test-glue-crawler-main-te-51bf891e",
          "State": "ENABLED",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-crawler",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-glue-crawler-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Targets": [
            {
              "Arn": {
                "Ref": "SsmParameterValuetestorgtestdomaindataopsprojecttestprojectTopicArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter",
              },
              "Id": "Target0",
            },
          ],
        },
        "Type": "AWS::Events::Rule",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Workflow Crawler failure events",
          "EventPattern": {
            "detail": {
              "crawlerName": [
                "test-org-test-env-test-domain-test-glue-crawler-main-test-crawler",
              ],
              "state": [
                "Failed",
              ],
            },
            "source": [
              "aws.glue",
            ],
          },
          "Name": "test-org-test-env-test-domain-test-glue-crawler-main-t--4ff29561",
          "State": "ENABLED",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-crawler",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-glue-crawler-main",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Targets": [
            {
              "Arn": {
                "Ref": "SsmParameterValuetestorgtestdomaindataopsprojecttestprojectTopicArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter",
              },
              "Id": "Target0",
            },
          ],
        },
        "Type": "AWS::Events::Rule",
      },
      "testcrawlercrawler": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-GL1",
                "reason": "[MDAA:@aws-mdaa/glue-constructs/lib/crawler.ts:LINE:COL] Log encryption configured via SecurityConfiguration",
              },
            ],
          },
        },
        "Properties": {
          "Classifiers": [
            {
              "Ref": "SsmParameterValuetestorgtestdomaindataopsprojecttestclassifiersclassifierCsvC96584B6F00A464EAD1953AFF4B05118Parameter",
            },
          ],
          "Configuration": "{"Version":1,"CrawlerOutput":{"Partitions":{"AddOrUpdateBehavior":"InheritFromTable"}}}",
          "CrawlerSecurityConfiguration": {
            "Ref": "SsmParameterValuetestorgtestdomaindataopsprojecttestsecurityConfigurationdefaultC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "DatabaseName": {
            "Ref": "SsmParameterValuetestorgtestdomaindataopsprojecttestdatabaseNameexampledatabaseC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "Description": "Example for a Crawler",
          "Name": "test-org-test-env-test-domain-test-glue-crawler-main-test-crawler",
          "RecrawlPolicy": {
            "RecrawlBehavior": "CRAWL_NEW_FOLDERS_ONLY",
          },
          "Role": "some-arn",
          "Schedule": {
            "ScheduleExpression": "cron(15 12 * * ? *)",
          },
          "SchemaChangePolicy": {
            "DeleteBehavior": "LOG",
            "UpdateBehavior": "UPDATE_IN_DATABASE",
          },
          "TablePrefix": "test_",
          "Tags": {
            "mdaa_cdk_app": "dataops-crawler",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-glue-crawler-main",
            "mdaa_org": "test-org",
          },
          "Targets": {
            "CatalogTargets": [
              {
                "ConnectionName": "test-catalog-connection",
                "DatabaseName": "test-catalog-db",
                "DlqEventQueueArn": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":sqs:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":test-catalog-dlq",
                    ],
                  ],
                },
                "EventQueueArn": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":sqs:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":test-catalog-queue",
                    ],
                  ],
                },
                "Tables": [
                  "test-table-1",
                  "test-table-2",
                ],
              },
            ],
            "DynamoDBTargets": [
              {
                "Path": "test-dynamo-table",
                "ScanAll": true,
                "ScanRate": 0.5,
              },
            ],
            "JdbcTargets": [
              {
                "ConnectionName": "test-jdbc-connection",
                "EnableAdditionalMetadata": [
                  "RAWTYPES",
                ],
                "Exclusions": [
                  "test-db/temp_*",
                ],
                "Path": "test-db/test-schema/test-table",
              },
            ],
            "S3Targets": [
              {
                "Path": "s3://some-s3-bucket/path/to/crawler/target",
              },
              {
                "ConnectionName": "test-s3-connection",
                "DlqEventQueueArn": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":sqs:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":test-dlq",
                    ],
                  ],
                },
                "EventQueueArn": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":sqs:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":test-queue",
                    ],
                  ],
                },
                "Exclusions": [
                  "**/_temporary/**",
                  "**.tmp",
                ],
                "Path": "s3://some-s3-bucket/path/to/second/target",
                "SampleSize": 10,
              },
            ],
          },
        },
        "Type": "AWS::Glue::Crawler",
      },
      "testcrawlerenumvariantscrawler": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-GL1",
                "reason": "[MDAA:@aws-mdaa/glue-constructs/lib/crawler.ts:LINE:COL] Log encryption configured via SecurityConfiguration",
              },
            ],
          },
        },
        "Properties": {
          "CrawlerSecurityConfiguration": {
            "Ref": "SsmParameterValuetestorgtestdomaindataopsprojecttestsecurityConfigurationdefaultC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "DatabaseName": {
            "Ref": "SsmParameterValuetestorgtestdomaindataopsprojecttestdatabaseNameexampledatabase2C96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "Description": "Crawler exercising alternate enum values",
          "Name": "test-org-test-env-test-domain-test-glue-crawler-main-test-crawler-enum-variants",
          "RecrawlPolicy": {
            "RecrawlBehavior": "CRAWL_EVERYTHING",
          },
          "Role": "some-arn",
          "SchemaChangePolicy": {
            "DeleteBehavior": "DELETE_FROM_DATABASE",
            "UpdateBehavior": "LOG",
          },
          "Tags": {
            "mdaa_cdk_app": "dataops-crawler",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-glue-crawler-main",
            "mdaa_org": "test-org",
          },
          "Targets": {
            "S3Targets": [
              {
                "Path": "s3://some-s3-bucket/path/to/enum-variant-target",
              },
            ],
          },
        },
        "Type": "AWS::Glue::Crawler",
      },
      "testcrawlereventmodecrawler": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-GL1",
                "reason": "[MDAA:@aws-mdaa/glue-constructs/lib/crawler.ts:LINE:COL] Log encryption configured via SecurityConfiguration",
              },
            ],
          },
        },
        "Properties": {
          "CrawlerSecurityConfiguration": {
            "Ref": "SsmParameterValuetestorgtestdomaindataopsprojecttestsecurityConfigurationdefaultC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "DatabaseName": {
            "Ref": "SsmParameterValuetestorgtestdomaindataopsprojecttestdatabaseNameexampledatabase3C96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "Description": "Crawler exercising event mode and deprecate behavior",
          "Name": "test-org-test-env-test-domain-test-glue-crawler-main-test-crawler-event-mode",
          "RecrawlPolicy": {
            "RecrawlBehavior": "CRAWL_EVENT_MODE",
          },
          "Role": "some-arn",
          "SchemaChangePolicy": {
            "DeleteBehavior": "DEPRECATE_IN_DATABASE",
            "UpdateBehavior": "UPDATE_IN_DATABASE",
          },
          "Tags": {
            "mdaa_cdk_app": "dataops-crawler",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-glue-crawler-main",
            "mdaa_org": "test-org",
          },
          "Targets": {
            "S3Targets": [
              {
                "Path": "s3://some-s3-bucket/path/to/event-mode-target",
              },
            ],
          },
        },
        "Type": "AWS::Glue::Crawler",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;

exports[`dataops-crawler Snapshot Tests Glue Crawler App Minimal App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-glue-crawler-minimal": {
    "Description": "(SO0320-dataops-crawler) Modern Data Architecture Accelerator. Version 1.5.0",
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojecttestdatabaseNameexampledatabaseC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-test/databaseName/example-database",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojecttestdeploymentRoledefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-test/deploymentRole/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojecttestkmsArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-test/kmsArn/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojecttestprojectBucketdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-test/projectBucket/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojecttestprojectTopicArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-test/projectTopicArn/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaindataopsprojecttestsecurityConfigurationdefaultC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/dataops-project-test/securityConfiguration/default",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-glue-crawler-minimal/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "dataops-crawler",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-glue-crawler-minimal",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-dataops-crawler) Modern Data Architecture Accelerator. Version 1.5.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/dataops-project-test/crawler/name/test-crawler",
          "Tags": {
            "mdaa_cdk_app": "dataops-crawler",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-glue-crawler-minimal",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-glue-crawler-minimal-test-crawler",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Workflow Crawler failure events",
          "EventPattern": {
            "detail": {
              "crawlerName": [
                "test-org-test-env-test-domain-test-glue-crawler-minimal-test-crawler",
              ],
              "state": [
                "Failed",
              ],
            },
            "source": [
              "aws.glue",
            ],
          },
          "Name": "test-org-test-env-test-domain-test-glue-crawler-minimal-54d8f04d",
          "State": "ENABLED",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-crawler",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-glue-crawler-minimal",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Targets": [
            {
              "Arn": {
                "Ref": "SsmParameterValuetestorgtestdomaindataopsprojecttestprojectTopicArndefaultC96584B6F00A464EAD1953AFF4B05118Parameter",
              },
              "Id": "Target0",
            },
          ],
        },
        "Type": "AWS::Events::Rule",
      },
      "testcrawlercrawler": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-GL1",
                "reason": "[MDAA:@aws-mdaa/glue-constructs/lib/crawler.ts:LINE:COL] Log encryption configured via SecurityConfiguration",
              },
            ],
          },
        },
        "Properties": {
          "CrawlerSecurityConfiguration": {
            "Ref": "SsmParameterValuetestorgtestdomaindataopsprojecttestsecurityConfigurationdefaultC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "DatabaseName": {
            "Ref": "SsmParameterValuetestorgtestdomaindataopsprojecttestdatabaseNameexampledatabaseC96584B6F00A464EAD1953AFF4B05118Parameter",
          },
          "Description": "Example for a Crawler",
          "Name": "test-org-test-env-test-domain-test-glue-crawler-minimal-test-crawler",
          "RecrawlPolicy": {},
          "Role": "some-arn",
          "Tags": {
            "mdaa_cdk_app": "dataops-crawler",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-glue-crawler-minimal",
            "mdaa_org": "test-org",
          },
          "Targets": {
            "S3Targets": [
              {
                "Path": "s3://some-s3-bucket/path/to/crawler/target",
              },
            ],
          },
        },
        "Type": "AWS::Glue::Crawler",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;

exports[`dataops-crawler Snapshot Tests Glue Crawler App Noproject App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-glue-crawler-noproject": {
    "Description": "(SO0320-dataops-crawler) Modern Data Architecture Accelerator. Version 1.5.0",
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-glue-crawler-noproject/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "dataops-crawler",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-glue-crawler-noproject",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-dataops-crawler) Modern Data Architecture Accelerator. Version 1.5.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Workflow Crawler failure events",
          "EventPattern": {
            "detail": {
              "crawlerName": [
                "test-org-test-env-test-domain-test-glue-crawler-noproject-test-crawler",
              ],
              "state": [
                "Failed",
              ],
            },
            "source": [
              "aws.glue",
            ],
          },
          "Name": "test-org-test-env-test-domain-test-glue-crawler-noproj--518342aa",
          "State": "ENABLED",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "dataops-crawler",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-glue-crawler-noproject",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
          "Targets": [
            {
              "Arn": {
                "Fn::Join": [
                  "",
                  [
                    "arn:",
                    {
                      "Ref": "AWS::Partition",
                    },
                    ":sns:",
                    {
                      "Ref": "AWS::Region",
                    },
                    ":",
                    {
                      "Ref": "AWS::AccountId",
                    },
                    ":test-topic",
                  ],
                ],
              },
              "Id": "Target0",
            },
          ],
        },
        "Type": "AWS::Events::Rule",
      },
      "testcrawlercrawler": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-GL1",
                "reason": "[MDAA:@aws-mdaa/glue-constructs/lib/crawler.ts:LINE:COL] Log encryption configured via SecurityConfiguration",
              },
            ],
          },
        },
        "Properties": {
          "Classifiers": [
            "project:classifiers/classifierCsv",
          ],
          "Configuration": "{"Version":1,"CrawlerOutput":{"Partitions":{"AddOrUpdateBehavior":"InheritFromTable"}}}",
          "CrawlerSecurityConfiguration": "test-security-config",
          "DatabaseName": "project:databaseName/example-database",
          "Description": "Example for a Crawler",
          "Name": "test-org-test-env-test-domain-test-glue-crawler-noproject-test-crawler",
          "RecrawlPolicy": {
            "RecrawlBehavior": "CRAWL_NEW_FOLDERS_ONLY",
          },
          "Role": "some-arn",
          "Tags": {
            "mdaa_cdk_app": "dataops-crawler",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-glue-crawler-noproject",
            "mdaa_org": "test-org",
          },
          "Targets": {
            "S3Targets": [
              {
                "Path": "s3://some-s3-bucket/path/to/crawler/target",
              },
            ],
          },
        },
        "Type": "AWS::Glue::Crawler",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;
